--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,7 +57,7 @@ section.announcement p a:hover {
 ul.tabs {
   height: 34px;
   padding: 0 20px;
-  background: url(http://static.arcadefly.com/images/helpers/tab_bottom.gif) repeat-x bottom;
+  border-bottom: 1px solid #a3a09e;
   clear: both;
   margin: 0px 0 20px; }
 
@@ -65,7 +65,9 @@ ul.tabs li {
   margin: 0;
   padding: 0;
   display: inline;
-  list-style-type: none; }
+  list-style-type: none;
+  position: relative;
+  top: 1px; }
 
 ul.tabs a:link, ul.tabs a:visited {
   float: left;
