--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -78,16 +78,10 @@ header {
 #nav ul li a {
   padding: .6em 1.4em;
   font-size: 1.4em;
-  margin-left: 1em;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  -webkit-border-top-left-radius: 6px;
-  -webkit-border-top-right-radius: 6px;
-  -moz-border-radius-topleft: 6px;
-  -moz-border-radius-topright: 6px; }
+  margin-left: 1em; }
 
 #nav ul li a:hover {
-  background-color: #68aff3; }
+  background-color: #4b81b4; }
 
 /* subnav */
 #subnav {
