--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div id='boxtop'></div>
 <div id='banner'>
-  <h1><%= "SitesUsing will be launching soon!" %></h1>
+  <h1>Line Of Thought will be launching soon!</h1>
 </div>
 <div id='boxmain'>
   <p>Enter your email address below and we'll notify you when we've launched.</p>
