Various fixes for jobs/sites/tools

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<% title "Add an Article to SitesUsing" %>
+<% title "Add an Article to Line Of Thought" %>
 
 <section id="content" class="main">
   <h2><%= @title %></h2>
@@ -11,7 +11,7 @@
   <aside>
     <h3>Bookmarklet</h3>
     <ul>
-      <li><%= link_to "Add Article to SitesUsing", "javascript:(function(){f='#{new_article_url(:format => "popup")}?article[url]='+encodeURIComponent(window.location.href)+'&article[title]='+encodeURIComponent(document.title);a=function(){if(!window.open(f,'sitesusing-new-article','location=yes,links=no,scrollbars=no,toolbar=no,width=625,height=550'))location.href=f};if(/Firefox/.test(navigator.userAgent)){setTimeout(a,0)}else{a()}})()" %></li>
+      <li><%= link_to "Add Article to LoT", "javascript:(function(){f='#{new_article_url(:format => "popup")}?article[url]='+encodeURIComponent(window.location.href)+'&article[title]='+encodeURIComponent(document.title);a=function(){if(!window.open(f,'lot-new-article','location=yes,links=no,scrollbars=no,toolbar=no,width=625,height=550'))location.href=f};if(/Firefox/.test(navigator.userAgent)){setTimeout(a,0)}else{a()}})()" %></li>
     </ul>
   </aside>
 </sidebar>
