--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,7 @@
         <li><a href="<%= tools_path %>"><strong>Tools</strong></a></li>
         <li><a href="<%= sites_path %>"><strong>Sites</strong></a></li>
         <li><a href="<%= articles_path %>"><strong>Articles</strong></a></li>
-        <li><a href="#"><strong>Jobs</strong></a></li>
-        <li><a href="#"><strong>Books</strong></a></li>
+        <li><a href="<%= jobs_path %>"><strong>Jobs</strong></a></li>
       </ul>
     </nav>
   </div>
