--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,19 +1,4 @@
-<% title "List of sites using #{@tool.name}" %>
-
-<section id="content" class="main tool">
-  <% cache(["full", @tool], :expires_in => 15.minutes) do %>
-    <%= render 'header' %>
-  <% end %>
-  
-  <ul class="tabs">
-    <li class="current"><a href="#" class="sites">Sites</a></li> 
-    <% if @tool.articles_count > 0 %><li><a href="<%= articles_tool_path(@tool) %>" class="articles">Articles</a></li><% end %>
-    <% if @tool.jobs_count > 0 %><li><a href="#" class="jobs">Jobs</a></li><% end %>
-    <% if @tool.books_count > 0 %><li><a href="#" class="books">Books</a></li><% end %>    
-  </ul>
-  
-  <%= render :partial => "sites", :object => @usings %>
-</section>
+<%= render 'show' %>
 
 <sidebar>
   <aside>
@@ -21,7 +6,7 @@
     <ul class="lst">
       <li><%= link_to "edit", edit_tool_path(@tool) %></li>
       <li><%= link_to "add sites", new_tool_site_path(@tool) %></li>
-      <li><%= link_to "delete", tool_path(@tool), :method => :delete, :confirm => "Are you sure you want to delete this tool?" %></li>
+      <li><%= link_to "delete", @tool, :method => :delete, :confirm => "Are you sure you want to delete this tool?" %></li>
     </ul>
   </aside>
 </sidebar>
