--- a/app/stylesheets/flutie.scss
+++ b/app/stylesheets/flutie.scss
@@ -94,6 +94,7 @@ div.alert, div.error, div.notice, div.success,
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   margin-bottom: 1em;
+  font-size:1.4em;
   padding: 0.8em; }
 
 div.alert,
