--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,8 +3,6 @@
 <section id="content" class="main tool">
 
   <div class="tool group ind">
-    <a href="<%= @article.url %>" class="screenshot" target="_blank"><img src="http://localhost:3000/images/screenshot.png" /></a>
-
     <div class="details">
       <div class="title">
         <h4><%= link_to @article.title, @article.url, :target => "_blank", :rel => "nofollow" %></h4>
@@ -22,28 +20,26 @@
       </div>
     </div>
   </div>
-  <% if Rails.env == "production" %>
-    <div>
-      <div id="disqus_thread"></div>
-      <script type="text/javascript">
-          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-          var disqus_shortname = 'sitesusing'; // required: replace example with your forum shortname
+  <div>
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'lineofthought'; // required: replace example with your forum shortname
 
-          // The following are highly recommended additional parameters. Remove the slashes in front to use.
-          // var disqus_identifier = 'unique_dynamic_id_1234';
-          // var disqus_url = 'http://example.com/permalink-to-page.html';
+        // The following are highly recommended additional parameters. Remove the slashes in front to use.
+        var disqus_identifier = 'article_<%= @article.id %>';
+        // var disqus_url = 'http://example.com/permalink-to-page.html';
 
-          /* * * DON'T EDIT BELOW THIS LINE * * */
-          (function() {
-              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-              dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-          })();
-      </script>
-      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-      <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-    </div>
-  <% end %>
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+  </div>
 </section>
 
 <sidebar>
