--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -33,7 +33,7 @@
     <h3>Admin Options</h3>
     <ul class="lst">
       <li><%= link_to "Edit this Site", edit_site_path(@site) %></li>
-      <li><%= link_to "Remove this Site", site_path(@site, :method => :delete) %></li>
+      <li><%= link_to "Remove this Site", @site, :method => :delete, :confirmation => "Are you sure you want to delete this site." %></li>
       <li><%= link_to "Manage Tools for this Site", edit_site_tools_path(@site) %></li>
     </ul>
   </aside>
