Changed the title to lineofthought where it was missing

--- a/app/views/layouts/notify.html.erb
+++ b/app/views/layouts/notify.html.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <meta content='SitesUsing.com - Find out what powers the web!' name='description' />
-    <title><%= "Notify me when SitesUsing launches!" %></title>
+    <meta content='LineOfThought.com - Find out what powers the web!' name='description' />
+    <title><%= "Notify me when LineOFThought launches!" %></title>
     <link href='/stylesheets/notify-me.css' rel='stylesheet' />
     <%= csrf_meta_tag %>
   </head>
