--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,4 +1,4 @@
-<% title "Add a Site to SitesUsing" %>
+<% title "Add a Site to Line Of Thought" %>
 
 <section id="content" class="main">
   <h2><%= @title %></h2>
