--- a/app/views/subscriptions/create.html.erb
+++ b/app/views/subscriptions/create.html.erb
@@ -3,7 +3,7 @@
   <h1>Thanks for your submission!</h1>
 </div>
 <div id='boxmain'>
-  <h3>We'll notify <%= @subscription.email %> when SitesUsing launches!</h3>
+  <h3>We'll notify <%= @subscription.email %> when Line Of Thought launches!</h3>
   <div class='button-container'>
     <a href='/' class='awesome enabled'>Return Home</a>
   </div>
