--- a/app/views/layouts/application.popup.erb
+++ b/app/views/layouts/application.popup.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <%- title = yield(:title) %>
-  <title><%=  title || "SitesUsing - Find out what powers the web!" %><%= " - SitesUsing" if title && !title.blank? %></title>
+  <title><%=  title || "Line Of Thought - Find out what powers the web!" %><%= " - Line Of Thought" if title && !title.blank? %></title>
   <%= raw stylesheet_link_merged :base %>
   <%= csrf_meta_tag %>
 </head>
@@ -16,7 +16,24 @@
   </div>
 </div>
 
+<% if Rails.env == "production" %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+<% else %>
+  <script src="/javascripts/jquery/jquery.js" type="text/javascript"></script>
+<% end %>
 <%= raw javascript_include_merged :base %>
 <%= yield :javascript %>
-</body>
+<% if Rails.env == "production" %>
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-90326-14']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+<% end %></body>
 </html>
