--- a/app/views/layouts/application.popup.erb
+++ b/app/views/layouts/application.popup.erb
@@ -3,7 +3,7 @@
 <head>
   <%- title = yield(:title) %>
   <title><%=  title || "Line Of Thought - Find out what powers the web!" %><%= " - Line Of Thought" if title && !title.blank? %></title>
-  <%= raw stylesheet_link_merged :base %>
+  <%= raw stylesheet_link_merged :all %>
   <%= csrf_meta_tag %>
 </head>
 <body class="popup">
@@ -21,7 +21,7 @@
 <% else %>
   <script src="/javascripts/jquery/jquery.js" type="text/javascript"></script>
 <% end %>
-<%= raw javascript_include_merged :base %>
+<%= raw javascript_include_merged :all %>
 <%= yield :javascript %>
 <% if Rails.env == "production" %>
 <script type="text/javascript">
